tests/resource/valid/control_flow/if_two_types.mamba
def a := if True then 10 else "asdf"
