tests/resource/invalid/type/function/return_undefined_explicit.mamba
def f() -> Int => return if True then 10 else None
